# genproc1

./: CMakeLists.txt
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Map.cpp  Map.hpp  Point.cpp  Point.hpp  calc.cpp  calc.hpp  main.cpp  pkt.cpp  pkt.hpp  pktnkju.cpp  pktnkju.hpp
src/k/: Makefile  k  k.pro
